<resources>
    <string name="app_name">Uber</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="logout">logout</string>
    <string name="Pickup">Pickup</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Distance">distance</string>
    <string name="Settings">Settings</string>
    <string name="name">name</string>
    <string name="update">Update</string>
    <string name="phone">Phone</string>
    <string name="fackData">Mostafa Zaghloul</string>
    <string name="callhim">Call The Customer</string>
    <string name="Info">Info</string>
    <string name="callhimDriver">Call Driver</string>
    <string name="NoInfo">No Information for this user !</string>
    <string name="Car">car</string>
    <string name="History">History</string>
    <string name="from">From</string>
    <string name="To">To</string>
    <string name="put">Put</string>
</resources>
