<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.mostafa.android.uber.CustomerSettingsActivity">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@mipmap/ic_proflie"
        android:layout_gravity="center"
        android:id="@+id/profile"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:hint="@string/name"
        android:textColorHint="@color/colorPrimary"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/phoneEditText"
        android:hint="@string/phone"
        android:inputType="number"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/update"/>

</LinearLayout>
