<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mostafa.android.uber.DriverMapsActivity">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout"
        android:layout_gravity="top"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Info"
        android:id="@+id/settingsDriver"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/DriverInfo"
        android:background="@android:color/white"
        android:padding="10dp"
        android:visibility="gone"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/re">
        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:id="@+id/driverImage"
            android:src="@mipmap/ic_proflie"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/NoInfo"
            android:id="@+id/noInfoDriver"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:id="@+id/customerDetailsLinearlayout"
            android:layout_toRightOf="@id/driverImage">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/fackData"
                android:textStyle="bold"
                android:id="@+id/driverName"
                android:textAppearance="?android:textAppearanceLarge"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/fackData"
                android:textStyle="bold"
                android:id="@+id/driverPhone"
                android:textAppearance="?android:textAppearanceSmall"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/fackData"
                android:textStyle="bold"
                android:id="@+id/driverDestion"
                android:textAppearance="?android:textAppearanceMedium"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callhim"
                android:id="@+id/phoneCall"/>
        </LinearLayout>
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pickup"
            android:id="@+id/pickCustomer"
            android:layout_below="@id/re"/>
    </RelativeLayout>
</FrameLayout>

