<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mostafa.android.uber.HistorySingleActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Textviewdistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black"
            tools:text="@string/fackData" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black"
                tools:text="@string/from" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/black"
                tools:text="@string/To" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextviewFromLat"
                style="@style/Textview"
                tools:text="@string/fackData" />

            <TextView
                android:id="@+id/TextviewToLat"
                style="@style/Textview"
                tools:text="@string/fackData" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextviewFromLng"
                style="@style/Textview"
                tools:text="@string/fackData" />

            <TextView
                android:id="@+id/TextviewToLng"
                style="@style/Textview"
                tools:text="@string/fackData" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Textview"
            tools:text="@string/fackData"
            android:gravity="left"
            android:id="@+id/TextviewdataSignle"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            style="@style/Textview"
            android:background="@color/black"
            android:text="User Info"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                tools:src="@mipmap/ic_proflie"
                android:id="@+id/ImageSingleHistory"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextviewnameUser"
                    style="@style/Textview1"
                    tools:text="@string/fackData"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextviewphoneUser"
                    style="@style/Textview1"
                    tools:text="@string/fackData"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
